Changed update urls for 10.5/ppc

--- a/Info.plist
+++ b/Info.plist
@@ -459,7 +459,7 @@
 	<key>NSPrincipalClass</key>
 	<string>MediaKeysApplication</string>
 	<key>SUFeedURL</key>
-	<string>http://mamburu.net/cog/stable.xml</string>
+	<string>http://mamburu.net/cog/stable-10.5.xml</string>
 	<key>SUPublicDSAKeyFile</key>
 	<string>cog_public.pem</string>
 </dict>
